# extract-entities

./: .gitattributes  Cargo.toml  index.d.ts  index.js  package.json  test.js
.github/workflows/: CI.yml
__test__/: index.spec.ts
src/: lib.rs
