
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "extract_entities"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
gline-rs = "1.0.1"
hf-hub = "0.5.0"
napi = "3.0.0"
napi-derive = "3.0.0"
orp = "0.9.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
